--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>201-01 lab</title>
     <meta name="description" content="This is my 201 lab"/>
     <link rel="stylesheet" href="reset.css">
-    <style> <style>
+    <style>
         * {
           padding: 0;
           margin: 0;
